<resources>
    <string name="app_name">Tareas</string>
    <string name="entrar">Entrar</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="username">Usuario</string>
    <string name="add_button" />
    <string name="agregar">Agregar</string>
    <string name="tarea_nueva">Tarea Nueva</string>
    <string name="gestor_de_tareas">Gestor de Tareas</string>
    <string name="editar">Editar</string>
    <string name="actualizar">Actualizar</string>
    <string name="mostrar_todos">Mostrar Todos</string>
    <string name="eliminar">Eliminar</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baja">Baja</string>
    <string name="finalizada">Finalizada</string>
    <string name="actualizar_nombre">Actualizar Tarea</string>
    <string name="id">ID</string>
    <string name="crear">Crear</string>
    <string name="registrar_cuenta">Registrar Cuenta</string>
    <string name="correo">Correo</string>
    <string name="registrar">Registrar</string>
    <string-array name="opciones_filtro">
        <item>A - Z</item>
        <item>Z - A</item>
        <item>ID: Menor a Mayor</item>
        <item>ID: Mayor a Menor</item>
    </string-array>

</resources>